--- a/package.json
+++ b/package.json
@@ -7,15 +7,26 @@
     "test": "mocha --timeout 5000 -R mocha-multi --reporter-options spec=-,json=.results.json"
   },
   "author": "flatironschool",
-  "license": "Included in Repo",
+  "license": "UNLICENSED",
   "dependencies": {
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
-    "chai": "^4.2.0",
+    "chai": "^4.3.7",
     "file-system": "^2.2.2",
     "jsdom": "^9.0",
     "mocha": "^5.2.0",
     "mocha-jsdom": "~1.1.0",
     "mocha-multi": "^1.0.1"
-  }
+  },
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zakiya-Abass/phase-1-destructuring-assignment.git"
+  },
+  "bugs": {
+    "url": "https://github.com/zakiya-Abass/phase-1-destructuring-assignment/issues"
+  },
+  "homepage": "https://github.com/zakiya-Abass/phase-1-destructuring-assignment#readme"
 }
